syntax = "proto3";
package sql;

option cc_enable_arenas = true;

message SqlQueryConfig {
    bool resultAllowSoftFailure = 1;
}
